prepare for video rooms 6
