# media-chat/api/src/Service/JanusUserApiService.php
@@ -113,41 +113,6 @@ class JanusUserApiService
             $this->textRoomClient->detachFromTextRoomPlugin();
             $this->textRoomClient->destroySession();
         }
-/*
-        $this->createNewSession();
-        $this->attachToTextRoom();
-
-        foreach ($rooms as $room) {
-            $body = [
-                'request' => 'create',
-                'admin_key' => $this->textRoomAdminSecret,
-                'room' => $room['id'],
-                'is_private' => $room['is_private'] === 1,
-                'history' => $room['history'],
-                'permanent' => $room['permanent'] === 1,
-            ];
-
-            if (!empty($room['description'])) $body['description'] = $room['description'];
-            if (!empty($room['secret'])) $body['secret'] = $room['secret'];
-            if (!empty($room['pin'])) $body['pin'] = $room['pin'];
-            if (!empty($room['post'])) $body['post'] = $room['post'];
-
-            $endpoint = $this->sessionId . '/' . $this->textRoomId;
-            try {
-                $this->makeTextRoomRequest($body, $endpoint);
-            } catch (\ErrorException $e) {
-                if ($e->getCode() === JanusConstants::JANUS_TEXTROOM_ERROR_ROOM_EXISTS) {
-                    // do nothing
-                } else {
-                    throw $e;
-                }
-            } catch (\Exception $e) {
-                throw $e;
-            }
-        }
-
-        $this->detachFromTextRoom();
-        $this->destroySession();*/
     }
 
     public function editRoom(int $id, ?string $secret, array $newRoom) : array
@@ -169,61 +134,18 @@ class JanusUserApiService
 
     public function destroyRoom(int $id, string $secret=null, bool $permanent=false) : array
     {
-        $this->createNewSession();
-        $this->attachToTextRoom();
+        $result = null;
 
-        $body = [
-            'request' => 'destroy',
-            'admin_key' => $this->textRoomAdminSecret,
-            'room' => $id,
-            'permanent' => $permanent,
-        ];
-        if (strlen($secret)) $body['secret'] = $secret;
-        $endpoint = $this->sessionId . '/' . $this->textRoomId;
-        $result = $this->makeTextRoomRequest($body, $endpoint);
+        if ($this->useTextRooms) {
+            $this->textRoomClient->createSession();
+            $this->textRoomClient->attachToTextRoomPlugin();
 
-        $this->detachFromTextRoom();
-        $this->destroySession();
+            $result = $this->textRoomClient->destroyRoom($id, $secret, $permanent);
 
-        return $result;
-    }
-
-    private function makeTextRoomRequest(array $body=[], string $endpoint='', string $method='POST')
-    {
-        $data = [
-            'transaction' => $this->getNewTransactionId(),
-            'janus' => 'message',
-            'body' => $body,
-        ];
-
-        $result = $this->makeRequest($data, $endpoint, $method);
-        $pluginResult = $result['plugindata']['data'];
-        if ($pluginResult['textroom'] === 'error') {
-            throw new \ErrorException($pluginResult['error'], $pluginResult['error_code']);
-        }
-
-        return $pluginResult;
-    }
-
-    private function makeRequest(array $data=[], string $endpoint='', string $method='POST') : array
-    {
-        $options = [];
-        if ($data) {
-            $options = ['json' => $data];
-        }
-
-        $response = $this->client->request($method, $endpoint, $options);
-        $result = $response->toArray();
-
-        if ($result['janus'] === 'error') {
-            throw new \ErrorException($result['error']['reason'], $result['error']['code']);
+            $this->textRoomClient->detachFromTextRoomPlugin();
+            $this->textRoomClient->destroySession();
         }
 
         return $result;
-    }
-
-    private function getNewTransactionId() : string
-    {
-        return uniqid('utr_');
     }
 }
